2012-07-09 Mark Holland <mark@mark-holland.me.uk>
	* AndroidManifest.xml: Added Pandora FMS 
	comment to header.

	* res/layout/About.xml: Swapped hardcoded
	text for strings.

	* res/layout/help.xml: Added scrollview.

	* res/layout/password_choose.xml: View for dialog
	when choosing whether to have a password.

	* res/layout/password_create.xml: Added textviews
	with instructions.

	* res/layout/password_entry.xml: Swapped hardcoded
	text for strings.

	* res/layout/setup.xml: Added checkboxes for all
	modules.

	* res/layout/setupnosim.xml: View that only
	shows checkboxes for modules that don't need a sim
	card present.

	* res/values/strings.xml: Updated help string
	(english only). Lots of new strings, also
	added to strings-en and strings-es.

	* src/pandroid/agent/About.java: Added Pandora FMS 
	comment to header.

	* src/pandroid/agent/core.java: Added Pandora FMS 
	comment to header. Added variable for hello signal.
	Added reporting variables for all modules. Changed 
	alarm to be accessed in a static way. changed agent
	identifier from pandroid plus simID to pandroid plus
	install uid.

	* src/pandroid/agent/Help.java:	Added Pandora FMS 
	comment to header.

	* src/pandroid/agent/Installation.java: Calculates a
	unique installation uid.

	* src/pandroid/agent/PandroidAgent.java: hasSim now 
	works whether phone without sim and also tablet without
	capability for sim card. On resume sets hello signal to 1.

	* src/pandroid/agent/PandroidAgentListener.java: Removed
	unnecessary variables, all defaults come from Core.java.
	Ensure Hello signal changed to 0 after every connection.
	Variables for all module reporting, data only added to xml
	if enabled in setup.

	* src/pandroid/agent/setup.java: Added Pandora FMS 
	comment to header. Different views loaded depending
	on whether sim card is present. Added button for changing
	password. Added checkboxes for all modules. Added dialog
	for choosing whether to set a password. Added minimum
	password length and emp